syntax = "proto3";

option go_package = "github.com/redhat-marketplace/redhat-marketplace-operator/airgap/v2/apis/filereceiver";
option java_multiple_files = true;
option java_package = "com.redhat.marketplace.airgap.filereceiver";
option java_outer_classname = "FileReceiver";

package filereceiver.v1;

import "apis/model/v1/modelv1.proto";
import "google/protobuf/timestamp.proto";

service FileReceiver {
  rpc ListFileMetadata(ListFileMetadataRequest) returns (stream ListFileMetadataResponse) {};
  rpc GetFileMetadata(GetFileMetadataRequest) returns (GetFileMetadataResponse) {};
  rpc DownloadFile(DownloadFileRequest) returns (stream DownloadFileResponse) {};
}

message ListFileMetadataRequest {
  message ListFileFilter {
    enum Comparison {
      EQUAL = 0;
      LESS_THAN = 1;
      GREATER_THAN = 2;
      CONTAINS = 3;
    }

    string key = 1;
    Comparison operator = 2;
    string value = 3;
  }

  message ListFileSort {
    enum SortOrder {
        ASC = 0;
        DESC = 1;
    }

    string key = 1;
    SortOrder sort_order = 2;
  }

  repeated ListFileFilter filter_by = 1;
  repeated ListFileSort sort_by = 2;
}


message ListFileMetadataResponse {
  model.v1.FileInfo results = 1;
}

message GetFileMetadataRequest {
  model.v1.FileID file_id = 1;
}

message GetFileMetadataResponse {
  model.v1.FileInfo info = 1;
}

message DownloadFileRequest {
  model.v1.FileID file_id = 1;
}

message DownloadFileResponse {
 oneof data {
    model.v1.FileInfo info = 1;
    bytes chunk_data = 2;
  };
}
